fix layout issues with checkboxes

--- a/styles/form.css
+++ b/styles/form.css
@@ -97,3 +97,8 @@ textarea {
 input[type="radio"] {
   transform: scale(1.5);
 }
+
+.features-checkboxes-container label {
+  display: inline;
+  margin-bottom: 0;
+}
